--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
 	<p>
 		There is nothing nobler than risking your life for your country.
 	</p>
+	<img src="https://i.pinimg.com/originals/a6/55/18/a6551844efa2f043b69e175d1bf0d83e.jpg">
 </body>
 </html>
